objects/pse__Vendor_Invoice__c.object
<CustomObject>
    <customHelpPage>pse__VendorInvoiceHelp</customHelpPage>
    <description>This object enables your vendors to proactively manage their own invoices through a partner portal, including logging time and entering expenses against projects. Vendor invoices must be in their project currency. However, they can be set up to specify a vendor currency so every child vendor invoice item can be converted by date and summed up to a vendor amount.</description>
    <fields>
        <fullName>pse__Account_Currency__c</fullName>
        <formula>TEXT(pse__Account__r.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The vendor account</description>
        <inlineHelpText>The vendor account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Invoices</relationshipLabel>
        <relationshipName>Vendor_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Action_Recalc_Vendor_Currency_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if checked, un-checks itself and forces re-population/calculation of Vendor Currency Amount Number values on all child Vendor Invoice Items, thereby updating the Vendor Currency Total formula value.</description>
        <label>Action: Recalc Vendor Currency Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Approved_for_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the invoice has been approved for payment</description>
        <label>Approved for Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date of the invoice</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Description__c</fullName>
        <description>A text description of the invoice</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__First_Item_Date__c</fullName>
        <description>A calculated field that shows the earliest vendor invoice item date.</description>
        <label>First Item Date</label>
        <summarizedField>pse__Vendor_Invoice_Item__c.pse__Date__c</summarizedField>
        <summaryForeignKey>pse__Vendor_Invoice_Item__c.pse__Vendor_Invoice__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pse__Invoice_Number__c</fullName>
        <description>A unique id field for the invoice</description>
        <externalId>true</externalId>
        <label>Invoice Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Last_Item_Date__c</fullName>
        <description>A calculated field that shows the latest vendor invoice item date.</description>
        <label>Last Item Date</label>
        <summarizedField>pse__Vendor_Invoice_Item__c.pse__Date__c</summarizedField>
        <summaryForeignKey>pse__Vendor_Invoice_Item__c.pse__Vendor_Invoice__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pse__Override_Vendor_Invoice_Exchange_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If not checked, rates at the line level always used rates defined on the system (unless they are themselves overridden).  If checked then all Vendor Invoice Lines used the specified rate (Vendor Exchange Rate Override) as described below.  This will also UN-check the checkbox for line-item-level overrides on all child Vendor Invoice Items:  Apply Item Exchange Rate Override.</description>
        <label>Override Vendor Invoice Exchange Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__PO_WO_Number__c</fullName>
        <externalId>true</externalId>
        <label>PO/WO Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__SFDC_VAT__c</fullName>
        <label>SFDC VAT#</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1234</fullName>
                </value>
                <value>
                    <fullName>B4321</fullName>
                </value>
                <value>
                    <fullName>C5467</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <description>Status of the invoice</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Disputed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved for Payment</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the invoice has been submitted for approval</description>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Target_Payment_Date__c</fullName>
        <description>The target date for payment</description>
        <label>Target Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Total__c</fullName>
        <description>The sum of all associated vendor invoice items.</description>
        <label>Total</label>
        <summarizedField>pse__Vendor_Invoice_Item__c.pse__Amount__c</summarizedField>
        <summaryForeignKey>pse__Vendor_Invoice_Item__c.pse__Vendor_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pse__Vendor_Currency_Total_Number__c</fullName>
        <label>Vendor Currency Total Number</label>
        <summarizedField>pse__Vendor_Invoice_Item__c.pse__Vendor_Currency_Amount_Number__c</summarizedField>
        <summaryForeignKey>pse__Vendor_Invoice_Item__c.pse__Vendor_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pse__Vendor_Currency_Total__c</fullName>
        <formula>pse__Vendor_Currency__c+&apos; &apos;+TEXT(pse__Vendor_Currency_Total_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Currency Total</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Vendor_Currency__c</fullName>
        <label>Vendor Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Vendor_Invoice_Exchange_Rate_Override__c</fullName>
        <description>Applied to all Vendor Invoice lines if Apply Vendor Exchange Rate Override checkbox is checked, regardless of rates defined on org.  Note that this will be set as the relative rate between the Vendor currency and the Project currency</description>
        <label>Vendor Invoice Exchange Rate Override</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Vendor_VAT__c</fullName>
        <label>Vendor VAT#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Vendor Invoice</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Account__c</columns>
        <columns>pse__Description__c</columns>
        <columns>pse__Date__c</columns>
        <columns>pse__Invoice_Number__c</columns>
        <columns>pse__PO_WO_Number__c</columns>
        <columns>pse__Status__c</columns>
        <columns>pse__Total__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>INV-{YYYY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>pse__Account_Required</fullName>
        <active>true</active>
        <description>Account Field is Required (Always)</description>
        <errorConditionFormula>OR(ISNULL(pse__Account__c),ISBLANK(pse__Account__c))</errorConditionFormula>
        <errorDisplayField>pse__Account__c</errorDisplayField>
        <errorMessage>Account is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Account_required_and_constant</fullName>
        <active>false</active>
        <errorConditionFormula>OR(ISCHANGED(pse__Account__c),LEN(pse__Account__c)=0)</errorConditionFormula>
        <errorDisplayField>pse__Account__c</errorDisplayField>
        <errorMessage>Account is required and cannot be changed once set</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Currency_is_constant</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISNEW()),ISCHANGED(CurrencyIsoCode))</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>Currency cannot be changed once set</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Rate_Required_when_Overriding</fullName>
        <active>true</active>
        <description>Ensures that a rate is provided if the Override Currency Exchange Rate checkbox is checked.</description>
        <errorConditionFormula>AND(pse__Override_Vendor_Invoice_Exchange_Rate__c=TRUE,
  OR(ISNULL(pse__Vendor_Invoice_Exchange_Rate_Override__c) ,
       ISBLANK(pse__Vendor_Invoice_Exchange_Rate_Override__c) 
      )
)</errorConditionFormula>
        <errorDisplayField>pse__Vendor_Invoice_Exchange_Rate_Override__c</errorDisplayField>
        <errorMessage>Vendor Invoice Exchange Rate Override must be supplied when checking the Override check box.</errorMessage>
    </validationRules>
</CustomObject>